--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "amqplib": "^0.5.3",
     "cbor": "^4.1.4",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "mongoose": "^5.3.15",
-    "mqtt": "^2.18.8"
+    "mqtt": "^2.18.8",
+    "twilio": "^3.29.2"
   }
 }
