--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "license": "LicenseRef-LICENSE",
   "homepage": "https://bitbucket.org/terepac/terepac-worker-mqtt-alerts#readme",
   "dependencies": {
-    "@terepac/terepac-models": "^0.7.10",
+    "@terepac/terepac-models": "^0.7.11",
     "amqplib": "^0.5.3",
     "cbor": "^4.1.4",
     "lodash": "^4.17.11",
+    "mandrill-api": "^1.0.45",
     "moment": "^2.24.0",
     "mongoose": "^5.3.15",
     "mqtt": "^2.18.8",
